# libtcod

.github/workflows/: build-autotools.yml  build-scons.yml
buildsys/autotools/: Makefile.am  configure.ac
buildsys/scons/: SConstruct
tests/: CMakeLists.txt  conanfile.py  unittest.cpp
